--- a/quill-style.css
+++ b/quill-style.css
@@ -4,3 +4,11 @@
     max-width:100%;
     max-height: 56vw;
 }
+
+pre.namuH2 {
+    margin:12em 0 0.8em;
+    background-color:white;
+    font-size:24px;
+    border-bottom:1px solid #ccc;
+    padding-bottom:5px;
+}
